# Classical-AI-Engines

./: .gitignore  README.md
AI-8-Puzzle/src/main/java/org/example/: BFS_Solver.java  DFS_Solver.java  Main.java  Puzzle_Solver.java  Puzzle_State.java
Connect4/: pyproject.toml
Connect4/src/: competition.py
Connect4/src/algorithms/: alpha_beta_pruning.py  expected_minmax.py  minmax.py  node.py
Connect4/src/envi/: __init__.py  board_logic.py  envi_state.py  tree.py  tree_generation.py
Connect4/src/gui/: __init__.py  main.py
Connect4/tests/: test_envi_state.py
EightPuzzleEngine/: README.md  build.gradle  gradlew  gradlew.bat  settings.gradle
EightPuzzleEngine/src/main/java/: module-info.java
EightPuzzleEngine/src/main/java/com/classicalai/eightpuzzle/: Controller.java  HelloApplication.java  HelloController.java  Main.java  Puzzle.java
EightPuzzleEngine/src/main/java/com/classicalai/eightpuzzle/algorithms/: AStarSolver.java  BFSSolver.java  DFSSolver.java  Engine.java  IDSSolver.java
EightPuzzleEngine/src/main/java/com/classicalai/eightpuzzle/environment/: EnvironmentState.java
EightPuzzleEngine/src/main/java/com/classicalai/eightpuzzle/ui/: PuzzleUI.java
EightPuzzleEngine/src/main/resources/com/classicalai/eightpuzzle/: PuzzleUI.fxml  PuzzleUI_2.fxml  hello-view.fxml
Sudoko/: pom.xml
Sudoko/src/main/java/: module-info.java
Sudoko/src/main/java/com/algorithms/sudoko/: Main.java
Sudoko/src/main/java/com/algorithms/sudoko/controllers/: HelloController.java  (+1 more)
Sudoko/src/main/resources/com/algorithms/sudoko/: SudokuUI.fxml  hello-view.fxml
(+6 files in other folders)
